Colab을 통해 생성됨

--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/eunShim/Backend/blob/main/bigdatacapstone.ipynb",
-      "authorship_tag": "ABX9TyPvMQcNSdRu0zpHN0SYsThE",
+      "authorship_tag": "ABX9TyN6ATqv3Z4IdfnbymKNhWcw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,117 +39,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# ============================================\n",
-        "# ✅ EdNet-KT4.zip 500명 샘플 분석 + 시각화 (7z 버전)\n",
-        "# ============================================\n",
-        "import os, random, pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
-        "from tqdm import tqdm\n",
-        "\n",
-        "# --------------------------------------------\n",
-        "# 1. 7z 설치 및 내부 파일 목록 확인\n",
-        "# --------------------------------------------\n",
-        "!sudo apt-get install -y p7zip-full > /dev/null\n",
-        "\n",
-        "zip_path = \"/content/EdNet-KT4.zip\"\n",
-        "list_output = os.popen(f\"7z l {zip_path} | grep '.csv' | awk '{{print $6}}'\").read().splitlines()\n",
-        "\n",
-        "if not list_output:\n",
-        "    raise RuntimeError(\"❌ CSV 파일 목록을 찾을 수 없습니다.\")\n",
-        "\n",
-        "print(f\"✅ 내부 CSV 파일 {len(list_output)}개 탐색됨\")\n",
-        "\n",
-        "# --------------------------------------------\n",
-        "# 2. 무작위 500명 샘플링 후 추출\n",
-        "# --------------------------------------------\n",
-        "sample_files = random.sample(list_output, 500)\n",
-        "os.makedirs(\"/content/KT4_sample\", exist_ok=True)\n",
-        "\n",
-        "# 선택된 500명만 추출\n",
-        "for f in tqdm(sample_files, desc=\"📦 압축 해제 중\"):\n",
-        "    os.system(f\"7z x '{zip_path}' '{f}' -o'/content/KT4_sample' -y > /dev/null\")\n",
-        "\n",
-        "print(\"✅ 샘플 500명 추출 완료!\")\n",
-        "\n",
-        "# --------------------------------------------\n",
-        "# 3. 사용자별 행동 통계 계산\n",
-        "# --------------------------------------------\n",
-        "folder = \"/content/KT4_sample\"\n",
-        "files = [os.path.join(folder, f) for f in os.listdir(folder) if f.endswith(\".csv\")]\n",
-        "\n",
-        "user_stats = []\n",
-        "\n",
-        "for f in tqdm(files, desc=\"📊 사용자 분석 중\"):\n",
-        "    try:\n",
-        "        df = pd.read_csv(f)\n",
-        "        if df.empty or \"timestamp\" not in df.columns:\n",
-        "            continue\n",
-        "\n",
-        "        user_id = os.path.basename(f).replace(\".csv\", \"\")\n",
-        "        df = df.sort_values(\"timestamp\")\n",
-        "\n",
-        "        quit_count = (df[\"action_type\"] == \"quit\").sum()\n",
-        "        duration = df[\"timestamp\"].iloc[-1] - df[\"timestamp\"].iloc[0]\n",
-        "        mobile_ratio = (df[\"platform\"] == \"mobile\").mean()\n",
-        "        web_ratio = (df[\"platform\"] == \"web\").mean()\n",
-        "        submit_count = (df[\"action_type\"] == \"submit\").sum()\n",
-        "        unique_q = df[df[\"item_id\"].astype(str).str.startswith(\"q\")][\"item_id\"].nunique()\n",
-        "        submit_ratio = submit_count / unique_q if unique_q > 0 else np.nan\n",
-        "\n",
-        "        user_stats.append({\n",
-        "            \"user_id\": user_id,\n",
-        "            \"quit_count\": quit_count,\n",
-        "            \"duration_ms\": duration,\n",
-        "            \"mobile_ratio\": mobile_ratio,\n",
-        "            \"web_ratio\": web_ratio,\n",
-        "            \"submit_ratio\": submit_ratio\n",
-        "        })\n",
-        "\n",
-        "    except Exception as e:\n",
-        "        print(f\"⚠️ {f} 처리 오류:\", e)\n",
-        "\n",
-        "stats_df = pd.DataFrame(user_stats)\n",
-        "print(\"\\n✅ 사용자별 통계 미리보기:\")\n",
-        "print(stats_df.head())\n",
-        "\n",
-        "# --------------------------------------------\n",
-        "# 4. 통계 요약\n",
-        "# --------------------------------------------\n",
-        "print(\"\\n📈 전체 통계 요약:\")\n",
-        "print(stats_df.describe())\n",
-        "\n",
-        "# --------------------------------------------\n",
-        "# 5. 시각화\n",
-        "# --------------------------------------------\n",
-        "plt.figure(figsize=(8,4))\n",
-        "stats_df[\"quit_count\"].hist(bins=30, color=\"lightcoral\")\n",
-        "plt.title(\"Quit 행동 횟수 분포\")\n",
-        "plt.xlabel(\"quit_count\")\n",
-        "plt.ylabel(\"사용자 수\")\n",
-        "plt.show()\n",
-        "\n",
-        "plt.figure(figsize=(8,4))\n",
-        "stats_df[\"submit_ratio\"].hist(bins=30, color=\"mediumseagreen\")\n",
-        "plt.title(\"문항 수 대비 Submit 비율 분포\")\n",
-        "plt.xlabel(\"submit_ratio\")\n",
-        "plt.ylabel(\"사용자 수\")\n",
-        "plt.show()\n",
-        "\n",
-        "plt.figure(figsize=(6,4))\n",
-        "stats_df[[\"mobile_ratio\",\"web_ratio\"]].mean().plot(kind='bar', color=[\"orange\",\"skyblue\"])\n",
-        "plt.title(\"평균 플랫폼 비율 (Mobile vs Web)\")\n",
-        "plt.ylabel(\"비율\")\n",
-        "plt.show()\n",
-        "\n",
-        "plt.figure(figsize=(8,4))\n",
-        "plt.scatter(stats_df[\"duration_ms\"]/60000, stats_df[\"quit_count\"], alpha=0.6, c=\"slateblue\")\n",
-        "plt.title(\"사용자별 소요시간 vs Quit 횟수\")\n",
-        "plt.xlabel(\"소요시간(분)\")\n",
-        "plt.ylabel(\"Quit 횟수\")\n",
-        "plt.show()\n",
-        "\n",
-        "print(\"\\n✅ 분석 및 시각화 완료! DataFrame 이름: stats_df\")\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "EpcEa_vkjLoP",
         "outputId": "5a4423a8-f8e2-4492-d406-7a21933b4096",
@@ -177,6 +67,203 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-- =============================================\n",
+        "-- 🎯 EdNet-KT4 학습행동 분석 (AWS Athena SQL)\n",
+        "-- =============================================\n",
+        "\n",
+        "WITH\n",
+        "-- --------------------------------------------------\n",
+        "-- ① 기본 통계\n",
+        "-- --------------------------------------------------\n",
+        "base AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    COUNT_IF(event_type = 'respond') AS n_attempts,\n",
+        "    COUNT_IF(event_type = 'submit') AS n_submit,\n",
+        "    COUNT_IF(event_type = 'quit') AS n_quit,\n",
+        "    COUNT(DISTINCT problem_id) AS n_questions,\n",
+        "    COUNT(DISTINCT bundle_id) AS n_bundles,\n",
+        "    COUNT(DISTINCT DATE(timestamp)) AS active_days\n",
+        "  FROM kt4_logs\n",
+        "  GROUP BY user_id\n",
+        "),\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ② 시간 기반 반응 지표\n",
+        "-- --------------------------------------------------\n",
+        "rt_stats AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    AVG(diff_sec) AS rt_mean,\n",
+        "    stddev_samp(diff_sec) AS rt_std,\n",
+        "    stddev_samp(EXTRACT(hour FROM timestamp)) AS consistent_study_rhythm,\n",
+        "    stddev_samp(diff_sec) / NULLIF(AVG(diff_sec), 0) AS rt_cv\n",
+        "  FROM (\n",
+        "    SELECT\n",
+        "      user_id,\n",
+        "      timestamp,\n",
+        "      CAST(\n",
+        "        date_diff('second',\n",
+        "          LAG(timestamp) OVER (PARTITION BY user_id ORDER BY timestamp),\n",
+        "          timestamp\n",
+        "        ) AS DOUBLE\n",
+        "      ) AS diff_sec\n",
+        "    FROM kt4_logs\n",
+        "    WHERE event_type = 'respond'\n",
+        "  )\n",
+        "  GROUP BY user_id\n",
+        "),\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ③ 선택·행동 패턴\n",
+        "-- --------------------------------------------------\n",
+        "behavior AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    SUM(choice_changed) AS n_choice_changes,\n",
+        "    SUM(IF(event_type IN ('erase_choice','undo_erase_choice'),1,0)) AS erasure_used,\n",
+        "    SUM(IF(event_type IN ('erase_choice','undo_erase_choice'),1,0)) * 1.0 /\n",
+        "      NULLIF(COUNT_IF(event_type='respond'),0) AS erasure_used_rate,\n",
+        "    SUM(IF(event_type LIKE '%audio%' OR event_type LIKE '%video%',1,0)) AS media_toggle_count\n",
+        "  FROM kt4_logs\n",
+        "  GROUP BY user_id\n",
+        "),\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ④ quit 관련 지표\n",
+        "-- --------------------------------------------------\n",
+        "quit_info AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    COUNT_IF(event_type='quit') AS quit_cnt,\n",
+        "    COUNT_IF(event_type='submit') AS submit_cnt,\n",
+        "    (COUNT_IF(event_type='quit') - COUNT_IF(event_type='submit')) * 1.0 /\n",
+        "      NULLIF(COUNT_IF(event_type='quit'),0) AS quit_without_submit_rate\n",
+        "  FROM kt4_logs\n",
+        "  GROUP BY user_id\n",
+        "),\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ⑤ 정답률 관련 지표\n",
+        "-- --------------------------------------------------\n",
+        "accuracy AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    AVG(first_correct) AS first_try_accuracy,\n",
+        "    AVG(last_correct) AS accuracy_final,\n",
+        "    AVG(IF(first_correct=0 AND last_correct=1,1,0)) AS self_correction_rate,\n",
+        "    AVG(IF(first_correct=1 AND last_correct=0,1,0)) AS regret_rate,\n",
+        "    (AVG(last_correct) - AVG(first_correct)) AS improvement_delta\n",
+        "  FROM (\n",
+        "    SELECT\n",
+        "      user_id, problem_id,\n",
+        "      element_at(split(array_join(array_agg(CAST(correct AS VARCHAR) ORDER BY timestamp ASC),','),','),1) AS first_correct,\n",
+        "      element_at(split(array_join(array_agg(CAST(correct AS VARCHAR) ORDER BY timestamp DESC),','),','),1) AS last_correct\n",
+        "    FROM kt4_logs\n",
+        "    WHERE event_type='respond'\n",
+        "    GROUP BY user_id, problem_id\n",
+        "  )\n",
+        "  GROUP BY user_id\n",
+        "),\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ⑥ 학습 리듬 및 플랫폼 비율\n",
+        "-- --------------------------------------------------\n",
+        "rhythm AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    AVG(diff_sec)/60 AS study_minutes_day,\n",
+        "    stddev_samp(EXTRACT(hour FROM timestamp)) AS start_hour_std,\n",
+        "    AVG(IF(platform='mobile',1,0)) AS platform_ratio_mobile,\n",
+        "    AVG(IF(platform='web',1,0)) AS platform_ratio_web\n",
+        "  FROM (\n",
+        "    SELECT\n",
+        "      user_id,\n",
+        "      timestamp,\n",
+        "      date_diff('second',\n",
+        "        LAG(timestamp) OVER (PARTITION BY user_id ORDER BY timestamp),\n",
+        "        timestamp\n",
+        "      ) AS diff_sec\n",
+        "    FROM kt4_logs\n",
+        "  )\n",
+        "  GROUP BY user_id\n",
+        "),\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ⑦ Z-score 정규화 (전체 사용자 단위)\n",
+        "-- --------------------------------------------------\n",
+        "z_norm AS (\n",
+        "  SELECT\n",
+        "    user_id,\n",
+        "    (n_choice_changes - AVG(n_choice_changes) OVER()) / NULLIF(stddev_samp(n_choice_changes) OVER(),0) AS z_n_choice_changes,\n",
+        "    (erasure_used_rate - AVG(erasure_used_rate) OVER()) / NULLIF(stddev_samp(erasure_used_rate) OVER(),0) AS z_erasure_used_rate,\n",
+        "    (rt_cv - AVG(rt_cv) OVER()) / NULLIF(stddev_samp(rt_cv) OVER(),0) AS z_rt_cv,\n",
+        "    (media_toggle_count - AVG(media_toggle_count) OVER()) / NULLIF(stddev_samp(media_toggle_count) OVER(),0) AS z_media_toggle_count,\n",
+        "    (quit_without_submit_rate - AVG(quit_without_submit_rate) OVER()) / NULLIF(stddev_samp(quit_without_submit_rate) OVER(),0) AS z_quit_without_submit_rate,\n",
+        "    (first_try_accuracy - AVG(first_try_accuracy) OVER()) / NULLIF(stddev_samp(first_try_accuracy) OVER(),0) AS z_first_try_accuracy,\n",
+        "    (self_correction_rate - AVG(self_correction_rate) OVER()) / NULLIF(stddev_samp(self_correction_rate) OVER(),0) AS z_self_correction_rate,\n",
+        "    (regret_rate - AVG(regret_rate) OVER()) / NULLIF(stddev_samp(regret_rate) OVER(),0) AS z_regret_rate\n",
+        "  FROM behavior\n",
+        "  JOIN rt_stats USING(user_id)\n",
+        "  JOIN quit_info USING(user_id)\n",
+        "  JOIN accuracy USING(user_id)\n",
+        ")\n",
+        "\n",
+        "-- --------------------------------------------------\n",
+        "-- ⑧ 최종 요약 (30개 변수 + 종합지수)\n",
+        "-- --------------------------------------------------\n",
+        "SELECT\n",
+        "  b.user_id,\n",
+        "\n",
+        "  -- 1️⃣ 기본 통계\n",
+        "  base.n_attempts, base.n_submit, base.n_quit, base.n_questions, base.n_bundles, base.active_days,\n",
+        "\n",
+        "  -- 2️⃣ 시간·집중\n",
+        "  rts.rt_mean, rts.rt_std, rts.rt_cv, rts.consistent_study_rhythm,\n",
+        "\n",
+        "  -- 3️⃣ 행동 패턴\n",
+        "  b.n_choice_changes, b.erasure_used, b.erasure_used_rate, b.media_toggle_count,\n",
+        "\n",
+        "  -- 4️⃣ quit 관련\n",
+        "  q.quit_without_submit_rate,\n",
+        "\n",
+        "  -- 5️⃣ 정답 관련\n",
+        "  a.first_try_accuracy, a.self_correction_rate, a.regret_rate, a.improvement_delta,\n",
+        "\n",
+        "  -- 6️⃣ 학습 리듬·플랫폼\n",
+        "  rh.study_minutes_day, rh.start_hour_std, rh.platform_ratio_mobile, rh.platform_ratio_web,\n",
+        "\n",
+        "  -- 7️⃣ 종합지수 (Z-score 기반)\n",
+        "  (\n",
+        "    z.z_n_choice_changes +\n",
+        "    z.z_erasure_used_rate +\n",
+        "    z.z_rt_cv +\n",
+        "    z.z_media_toggle_count +\n",
+        "    z.z_quit_without_submit_rate\n",
+        "  ) AS F_index,\n",
+        "\n",
+        "  (\n",
+        "    z.z_first_try_accuracy +\n",
+        "    z.z_self_correction_rate -\n",
+        "    z.z_regret_rate -\n",
+        "    z.z_quit_without_submit_rate\n",
+        "  ) AS SE_index\n",
+        "\n",
+        "FROM behavior b\n",
+        "JOIN base USING(user_id)\n",
+        "JOIN rt_stats rts USING(user_id)\n",
+        "JOIN quit_info q USING(user_id)\n",
+        "JOIN accuracy a USING(user_id)\n",
+        "JOIN rhythm rh USING(user_id)\n",
+        "JOIN z_norm z USING(user_id);\n"
+      ],
+      "metadata": {
+        "id": "i7Xx-IYV5Drf"
+      }
     },
     {
       "cell_type": "code",
