Colab을 통해 생성됨

--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/eunShim/Backend/blob/main/bigdatacapstone.ipynb",
-      "authorship_tag": "ABX9TyMmg4f0Ae7apPCydW1SXlcg",
+      "authorship_tag": "ABX9TyMaYNwNI1elaPzDGzYXMTdb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -232,6 +232,90 @@
       ],
       "metadata": {
         "id": "BWYxA2cBjLqU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pymysql\n",
+        "import pandas as pd\n",
+        "\n",
+        "# 1️⃣ MySQL 연결\n",
+        "conn = pymysql.connect(\n",
+        "    host='127.0.0.1',\n",
+        "    user='root',\n",
+        "    password='0000',\n",
+        "    db='ednetDB',\n",
+        "    charset='utf8'\n",
+        ")\n",
+        "cur = conn.cursor()\n",
+        "\n",
+        "# 2️⃣ KT4 로그 테이블 생성 (이미 있으면 생략)\n",
+        "cur.execute(\"\"\"\n",
+        "CREATE TABLE IF NOT EXISTS kt4_logs (\n",
+        "    user_id INT,\n",
+        "    timestamp BIGINT,\n",
+        "    action_type VARCHAR(20),\n",
+        "    item_id VARCHAR(20),\n",
+        "    cursor_time VARCHAR(20),\n",
+        "    source VARCHAR(50),\n",
+        "    user_answer VARCHAR(10),\n",
+        "    platform VARCHAR(10)\n",
+        ")\n",
+        "\"\"\")\n",
+        "\n",
+        "print(\"✅ KT4 로그 테이블 준비 완료\")\n",
+        "\n",
+        "# ------------------------------------------------------\n",
+        "# ⚙️ 3️⃣ CSV 파일 → DB 삽입 (예시: 100개만)\n",
+        "# ------------------------------------------------------\n",
+        "import csv\n",
+        "\n",
+        "with open('EdNet-KT4_sample.csv', 'r', encoding='utf-8') as f:\n",
+        "    next(f)  # 헤더 스킵\n",
+        "    reader = csv.reader(f)\n",
+        "    for row in reader:\n",
+        "        cur.execute(\"\"\"\n",
+        "            INSERT INTO kt4_logs (user_id, timestamp, action_type, item_id, cursor_time, source, user_answer, platform)\n",
+        "            VALUES (%s,%s,%s,%s,%s,%s,%s,%s)\n",
+        "        \"\"\", row[:8])  # 컬럼 순서 맞추기\n",
+        "conn.commit()\n",
+        "print(\"✅ CSV → MySQL 데이터 삽입 완료\")\n",
+        "\n",
+        "# ------------------------------------------------------\n",
+        "# 🧮 4️⃣ SQL로 n_attempts / n_submit / n_quit 계산\n",
+        "# ------------------------------------------------------\n",
+        "query = \"\"\"\n",
+        "SELECT\n",
+        "    user_id,\n",
+        "    SUM(CASE WHEN action_type = 'respond' THEN 1 ELSE 0 END) AS n_attempts,\n",
+        "    SUM(CASE WHEN action_type = 'submit' THEN 1 ELSE 0 END) AS n_submit,\n",
+        "    SUM(CASE WHEN action_type = 'quit'\n",
+        "             AND item_id NOT LIKE 'l%'\n",
+        "             AND item_id NOT LIKE 'e%' THEN 1 ELSE 0 END) AS n_quit\n",
+        "FROM kt4_logs\n",
+        "GROUP BY user_id\n",
+        "ORDER BY user_id;\n",
+        "\"\"\"\n",
+        "\n",
+        "cur.execute(query)\n",
+        "rows = cur.fetchall()\n",
+        "\n",
+        "# ------------------------------------------------------\n",
+        "# 📊 5️⃣ Pandas DataFrame으로 보기\n",
+        "# ------------------------------------------------------\n",
+        "df = pd.DataFrame(rows, columns=['user_id','n_attempts','n_submit','n_quit'])\n",
+        "print(df.head())\n",
+        "\n",
+        "# ------------------------------------------------------\n",
+        "# 6️⃣ 연결 종료\n",
+        "# ------------------------------------------------------\n",
+        "conn.close()\n"
+      ],
+      "metadata": {
+        "id": "SRdwuJIj7M1Z"
       },
       "execution_count": null,
       "outputs": []
