Colab을 통해 생성됨

--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/eunShim/Backend/blob/main/bigdatacapstone.ipynb",
-      "authorship_tag": "ABX9TyMaYNwNI1elaPzDGzYXMTdb",
+      "authorship_tag": "ABX9TyOy3i42qCOgIg/WdYEAUH3j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,294 +28,127 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "- KT4 파일로 500명 샘플링해서 사용자 로그 quit 횟수, timestamp 차이(소요시간), mobile/web 비율, submit 비율 계산함\n",
-        "- 500명 행동 패턴 통계 출력"
-      ],
-      "metadata": {
-        "id": "FK7JzDcppKP1"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "-- =============================================\n",
-        "-- 🎯 EdNet-KT4 학습행동 분석 (AWS Athena SQL)\n",
-        "-- =============================================\n",
+        "# ============================================\n",
+        "# ✅ EdNet-KT4.zip 10,000명 샘플 분석 (7z 기반 + 재귀 탐색)\n",
+        "# ============================================\n",
+        "import os\n",
+        "import random\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from tqdm import tqdm\n",
         "\n",
-        "WITH\n",
-        "-- --------------------------------------------------\n",
-        "-- ① 기본 통계\n",
-        "-- --------------------------------------------------\n",
-        "base AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    COUNT_IF(event_type = 'respond') AS n_attempts,\n",
-        "    COUNT_IF(event_type = 'submit') AS n_submit,\n",
-        "    COUNT_IF(event_type = 'quit') AS n_quit,\n",
-        "    COUNT(DISTINCT problem_id) AS n_questions,\n",
-        "    COUNT(DISTINCT bundle_id) AS n_bundles,\n",
-        "    COUNT(DISTINCT DATE(timestamp)) AS active_days\n",
-        "  FROM kt4_logs\n",
-        "  GROUP BY user_id\n",
-        "),\n",
+        "# --------------------------------------------\n",
+        "# 1. 7z 설치 및 내부 파일 목록 확인\n",
+        "# --------------------------------------------\n",
+        "# (Colab 환경일 경우 실행됨. 일반 환경에서는 주석 처리 권장)\n",
+        "os.system(\"sudo apt-get install -y p7zip-full > /dev/null\")\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ② 시간 기반 반응 지표\n",
-        "-- --------------------------------------------------\n",
-        "rt_stats AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    AVG(diff_sec) AS rt_mean,\n",
-        "    stddev_samp(diff_sec) AS rt_std,\n",
-        "    stddev_samp(EXTRACT(hour FROM timestamp)) AS consistent_study_rhythm,\n",
-        "    stddev_samp(diff_sec) / NULLIF(AVG(diff_sec), 0) AS rt_cv\n",
-        "  FROM (\n",
-        "    SELECT\n",
-        "      user_id,\n",
-        "      timestamp,\n",
-        "      CAST(\n",
-        "        date_diff('second',\n",
-        "          LAG(timestamp) OVER (PARTITION BY user_id ORDER BY timestamp),\n",
-        "          timestamp\n",
-        "        ) AS DOUBLE\n",
-        "      ) AS diff_sec\n",
-        "    FROM kt4_logs\n",
-        "    WHERE event_type = 'respond'\n",
-        "  )\n",
-        "  GROUP BY user_id\n",
-        "),\n",
+        "zip_path = \"/content/EdNet-KT4.zip\"\n",
+        "list_output = os.popen(\n",
+        "    f\"7z l '{zip_path}' | grep '.csv' | awk '{{print $6}}'\"\n",
+        ").read().splitlines()\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ③ 선택·행동 패턴\n",
-        "-- --------------------------------------------------\n",
-        "behavior AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    SUM(choice_changed) AS n_choice_changes,\n",
-        "    SUM(IF(event_type IN ('erase_choice','undo_erase_choice'),1,0)) AS erasure_used,\n",
-        "    SUM(IF(event_type IN ('erase_choice','undo_erase_choice'),1,0)) * 1.0 /\n",
-        "      NULLIF(COUNT_IF(event_type='respond'),0) AS erasure_used_rate,\n",
-        "    SUM(IF(event_type LIKE '%audio%' OR event_type LIKE '%video%',1,0)) AS media_toggle_count\n",
-        "  FROM kt4_logs\n",
-        "  GROUP BY user_id\n",
-        "),\n",
+        "if not list_output:\n",
+        "    raise RuntimeError(\"❌ CSV 파일 목록을 찾을 수 없습니다. 파일이 손상되었거나 ZIP 포맷이 아닐 수 있습니다.\")\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ④ quit 관련 지표\n",
-        "-- --------------------------------------------------\n",
-        "quit_info AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    COUNT_IF(event_type='quit') AS quit_cnt,\n",
-        "    COUNT_IF(event_type='submit') AS submit_cnt,\n",
-        "    (COUNT_IF(event_type='quit') - COUNT_IF(event_type='submit')) * 1.0 /\n",
-        "      NULLIF(COUNT_IF(event_type='quit'),0) AS quit_without_submit_rate\n",
-        "  FROM kt4_logs\n",
-        "  GROUP BY user_id\n",
-        "),\n",
+        "total_files = len(list_output)\n",
+        "print(f\"✅ 내부 CSV 파일 {total_files}개 탐색됨\")\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ⑤ 정답률 관련 지표\n",
-        "-- --------------------------------------------------\n",
-        "accuracy AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    AVG(first_correct) AS first_try_accuracy,\n",
-        "    AVG(last_correct) AS accuracy_final,\n",
-        "    AVG(IF(first_correct=0 AND last_correct=1,1,0)) AS self_correction_rate,\n",
-        "    AVG(IF(first_correct=1 AND last_correct=0,1,0)) AS regret_rate,\n",
-        "    (AVG(last_correct) - AVG(first_correct)) AS improvement_delta\n",
-        "  FROM (\n",
-        "    SELECT\n",
-        "      user_id, problem_id,\n",
-        "      element_at(split(array_join(array_agg(CAST(correct AS VARCHAR) ORDER BY timestamp ASC),','),','),1) AS first_correct,\n",
-        "      element_at(split(array_join(array_agg(CAST(correct AS VARCHAR) ORDER BY timestamp DESC),','),','),1) AS last_correct\n",
-        "    FROM kt4_logs\n",
-        "    WHERE event_type='respond'\n",
-        "    GROUP BY user_id, problem_id\n",
-        "  )\n",
-        "  GROUP BY user_id\n",
-        "),\n",
+        "# --------------------------------------------\n",
+        "# 2. 무작위 10,000명 샘플링 후 추출\n",
+        "# --------------------------------------------\n",
+        "sample_n = min(10000, total_files)  # 전체 파일이 1만개 미만일 경우 자동 조정\n",
+        "sample_files = random.sample(list_output, sample_n)\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ⑥ 학습 리듬 및 플랫폼 비율\n",
-        "-- --------------------------------------------------\n",
-        "rhythm AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    AVG(diff_sec)/60 AS study_minutes_day,\n",
-        "    stddev_samp(EXTRACT(hour FROM timestamp)) AS start_hour_std,\n",
-        "    AVG(IF(platform='mobile',1,0)) AS platform_ratio_mobile,\n",
-        "    AVG(IF(platform='web',1,0)) AS platform_ratio_web\n",
-        "  FROM (\n",
-        "    SELECT\n",
-        "      user_id,\n",
-        "      timestamp,\n",
-        "      date_diff('second',\n",
-        "        LAG(timestamp) OVER (PARTITION BY user_id ORDER BY timestamp),\n",
-        "        timestamp\n",
-        "      ) AS diff_sec\n",
-        "    FROM kt4_logs\n",
-        "  )\n",
-        "  GROUP BY user_id\n",
-        "),\n",
+        "output_folder = \"/content/KT4_sample\"\n",
+        "os.makedirs(output_folder, exist_ok=True)\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ⑦ Z-score 정규화 (전체 사용자 단위)\n",
-        "-- --------------------------------------------------\n",
-        "z_norm AS (\n",
-        "  SELECT\n",
-        "    user_id,\n",
-        "    (n_choice_changes - AVG(n_choice_changes) OVER()) / NULLIF(stddev_samp(n_choice_changes) OVER(),0) AS z_n_choice_changes,\n",
-        "    (erasure_used_rate - AVG(erasure_used_rate) OVER()) / NULLIF(stddev_samp(erasure_used_rate) OVER(),0) AS z_erasure_used_rate,\n",
-        "    (rt_cv - AVG(rt_cv) OVER()) / NULLIF(stddev_samp(rt_cv) OVER(),0) AS z_rt_cv,\n",
-        "    (media_toggle_count - AVG(media_toggle_count) OVER()) / NULLIF(stddev_samp(media_toggle_count) OVER(),0) AS z_media_toggle_count,\n",
-        "    (quit_without_submit_rate - AVG(quit_without_submit_rate) OVER()) / NULLIF(stddev_samp(quit_without_submit_rate) OVER(),0) AS z_quit_without_submit_rate,\n",
-        "    (first_try_accuracy - AVG(first_try_accuracy) OVER()) / NULLIF(stddev_samp(first_try_accuracy) OVER(),0) AS z_first_try_accuracy,\n",
-        "    (self_correction_rate - AVG(self_correction_rate) OVER()) / NULLIF(stddev_samp(self_correction_rate) OVER(),0) AS z_self_correction_rate,\n",
-        "    (regret_rate - AVG(regret_rate) OVER()) / NULLIF(stddev_samp(regret_rate) OVER(),0) AS z_regret_rate\n",
-        "  FROM behavior\n",
-        "  JOIN rt_stats USING(user_id)\n",
-        "  JOIN quit_info USING(user_id)\n",
-        "  JOIN accuracy USING(user_id)\n",
-        ")\n",
+        "print(f\"📦 무작위 {sample_n}명 추출 중...\")\n",
         "\n",
-        "-- --------------------------------------------------\n",
-        "-- ⑧ 최종 요약 (30개 변수 + 종합지수)\n",
-        "-- --------------------------------------------------\n",
-        "SELECT\n",
-        "  b.user_id,\n",
+        "for f in tqdm(sample_files, desc=\"📂 압축 해제 중\"):\n",
+        "    os.system(f\"7z x '{zip_path}' '{f}' -o'{output_folder}' -y > /dev/null\")\n",
         "\n",
-        "  -- 1️⃣ 기본 통계\n",
-        "  base.n_attempts, base.n_submit, base.n_quit, base.n_questions, base.n_bundles, base.active_days,\n",
+        "print(f\"✅ {sample_n}명 샘플 추출 완료!\")\n",
         "\n",
-        "  -- 2️⃣ 시간·집중\n",
-        "  rts.rt_mean, rts.rt_std, rts.rt_cv, rts.consistent_study_rhythm,\n",
+        "# --------------------------------------------\n",
+        "# 3. 하위 폴더까지 재귀적으로 CSV 탐색\n",
+        "# --------------------------------------------\n",
+        "csv_list = []\n",
+        "for root, dirs, files in os.walk(output_folder):\n",
+        "    for f in files:\n",
+        "        if f.endswith(\".csv\"):\n",
+        "            csv_list.append(os.path.join(root, f))\n",
         "\n",
-        "  -- 3️⃣ 행동 패턴\n",
-        "  b.n_choice_changes, b.erasure_used, b.erasure_used_rate, b.media_toggle_count,\n",
+        "print(f\"📁 실제 CSV 파일 개수: {len(csv_list)}\")\n",
         "\n",
-        "  -- 4️⃣ quit 관련\n",
-        "  q.quit_without_submit_rate,\n",
+        "# --------------------------------------------\n",
+        "# 4. 사용자별 행동 통계 계산 (7개 변수)\n",
+        "# --------------------------------------------\n",
+        "results = []\n",
+        "print(f\"📊 {len(csv_list)}명 데이터 분석 시작...\")\n",
         "\n",
-        "  -- 5️⃣ 정답 관련\n",
-        "  a.first_try_accuracy, a.self_correction_rate, a.regret_rate, a.improvement_delta,\n",
+        "for i, file_path in enumerate(tqdm(csv_list, desc=\"📈 사용자 분석 중\")):\n",
+        "    try:\n",
+        "        df = pd.read_csv(file_path)\n",
+        "    except Exception as e:\n",
+        "        print(f\"⚠️ {file_path} 스킵됨 ({e})\")\n",
+        "        continue\n",
         "\n",
-        "  -- 6️⃣ 학습 리듬·플랫폼\n",
-        "  rh.study_minutes_day, rh.start_hour_std, rh.platform_ratio_mobile, rh.platform_ratio_web,\n",
+        "    user_id = os.path.splitext(os.path.basename(file_path))[0]\n",
+        "    df.columns = [c.strip().lower() for c in df.columns]\n",
         "\n",
-        "  -- 7️⃣ 종합지수 (Z-score 기반)\n",
-        "  (\n",
-        "    z.z_n_choice_changes +\n",
-        "    z.z_erasure_used_rate +\n",
-        "    z.z_rt_cv +\n",
-        "    z.z_media_toggle_count +\n",
-        "    z.z_quit_without_submit_rate\n",
-        "  ) AS F_index,\n",
+        "    if 'item_id' not in df.columns or 'action_type' not in df.columns or 'platform' not in df.columns:\n",
+        "        continue\n",
         "\n",
-        "  (\n",
-        "    z.z_first_try_accuracy +\n",
-        "    z.z_self_correction_rate -\n",
-        "    z.z_regret_rate -\n",
-        "    z.z_quit_without_submit_rate\n",
-        "  ) AS SE_index\n",
+        "    df = df[df['item_id'].notna()]\n",
+        "    df_valid = df[~df['item_id'].astype(str).str.startswith(('l', 'e'))]\n",
         "\n",
-        "FROM behavior b\n",
-        "JOIN base USING(user_id)\n",
-        "JOIN rt_stats rts USING(user_id)\n",
-        "JOIN quit_info q USING(user_id)\n",
-        "JOIN accuracy a USING(user_id)\n",
-        "JOIN rhythm rh USING(user_id)\n",
-        "JOIN z_norm z USING(user_id);\n"
+        "    df_valid['problem_id'] = df_valid['item_id'].where(df_valid['item_id'].str.startswith('q'))\n",
+        "    df_valid['bundle_id'] = df_valid['item_id'].where(df_valid['item_id'].str.startswith('b'))\n",
+        "    df_valid['user_id'] = user_id\n",
+        "\n",
+        "    base = (\n",
+        "        df_valid.groupby('user_id')\n",
+        "        .agg(\n",
+        "            n_attempts=('action_type', lambda x: (x == 'respond').sum()),\n",
+        "            n_submit=('action_type', lambda x: (x == 'submit').sum()),\n",
+        "            n_quit=('action_type', lambda x: (x == 'quit').sum()),\n",
+        "            n_questions=('problem_id', lambda x: x.nunique()),\n",
+        "            n_bundles=('bundle_id', lambda x: x.nunique())\n",
+        "        )\n",
+        "        .reset_index()\n",
+        "    )\n",
+        "\n",
+        "    plat = (\n",
+        "        df_valid.groupby('user_id')\n",
+        "        .agg(\n",
+        "            platform_ratio_web=('platform', lambda x: np.mean(x == 'web')),\n",
+        "            platform_ratio_mobile=('platform', lambda x: np.mean(x == 'mobile'))\n",
+        "        )\n",
+        "        .reset_index()\n",
+        "    )\n",
+        "\n",
+        "    merged = base.merge(plat, on='user_id', how='left')\n",
+        "    results.append(merged)\n",
+        "\n",
+        "    if (i + 1) % 500 == 0:\n",
+        "        print(f\"Processed {i+1}/{len(csv_list)} users\")\n",
+        "\n",
+        "# --------------------------------------------\n",
+        "# 5. 결과 저장\n",
+        "# --------------------------------------------\n",
+        "if len(results) > 0:\n",
+        "    final = pd.concat(results, ignore_index=True)\n",
+        "    output_path = \"/content/kt4_sample_metrics_10000_fixed.csv\"\n",
+        "    final.to_csv(output_path, index=False, encoding='utf-8-sig')\n",
+        "    print(f\"✅ 분석 완료 → {output_path} ({len(final)}명)\")\n",
+        "else:\n",
+        "    print(\"❌ 처리할 유효한 CSV가 없습니다.\")\n"
       ],
       "metadata": {
         "id": "BWYxA2cBjLqU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pymysql\n",
-        "import pandas as pd\n",
-        "\n",
-        "# 1️⃣ MySQL 연결\n",
-        "conn = pymysql.connect(\n",
-        "    host='127.0.0.1',\n",
-        "    user='root',\n",
-        "    password='0000',\n",
-        "    db='ednetDB',\n",
-        "    charset='utf8'\n",
-        ")\n",
-        "cur = conn.cursor()\n",
-        "\n",
-        "# 2️⃣ KT4 로그 테이블 생성 (이미 있으면 생략)\n",
-        "cur.execute(\"\"\"\n",
-        "CREATE TABLE IF NOT EXISTS kt4_logs (\n",
-        "    user_id INT,\n",
-        "    timestamp BIGINT,\n",
-        "    action_type VARCHAR(20),\n",
-        "    item_id VARCHAR(20),\n",
-        "    cursor_time VARCHAR(20),\n",
-        "    source VARCHAR(50),\n",
-        "    user_answer VARCHAR(10),\n",
-        "    platform VARCHAR(10)\n",
-        ")\n",
-        "\"\"\")\n",
-        "\n",
-        "print(\"✅ KT4 로그 테이블 준비 완료\")\n",
-        "\n",
-        "# ------------------------------------------------------\n",
-        "# ⚙️ 3️⃣ CSV 파일 → DB 삽입 (예시: 100개만)\n",
-        "# ------------------------------------------------------\n",
-        "import csv\n",
-        "\n",
-        "with open('EdNet-KT4_sample.csv', 'r', encoding='utf-8') as f:\n",
-        "    next(f)  # 헤더 스킵\n",
-        "    reader = csv.reader(f)\n",
-        "    for row in reader:\n",
-        "        cur.execute(\"\"\"\n",
-        "            INSERT INTO kt4_logs (user_id, timestamp, action_type, item_id, cursor_time, source, user_answer, platform)\n",
-        "            VALUES (%s,%s,%s,%s,%s,%s,%s,%s)\n",
-        "        \"\"\", row[:8])  # 컬럼 순서 맞추기\n",
-        "conn.commit()\n",
-        "print(\"✅ CSV → MySQL 데이터 삽입 완료\")\n",
-        "\n",
-        "# ------------------------------------------------------\n",
-        "# 🧮 4️⃣ SQL로 n_attempts / n_submit / n_quit 계산\n",
-        "# ------------------------------------------------------\n",
-        "query = \"\"\"\n",
-        "SELECT\n",
-        "    user_id,\n",
-        "    SUM(CASE WHEN action_type = 'respond' THEN 1 ELSE 0 END) AS n_attempts,\n",
-        "    SUM(CASE WHEN action_type = 'submit' THEN 1 ELSE 0 END) AS n_submit,\n",
-        "    SUM(CASE WHEN action_type = 'quit'\n",
-        "             AND item_id NOT LIKE 'l%'\n",
-        "             AND item_id NOT LIKE 'e%' THEN 1 ELSE 0 END) AS n_quit\n",
-        "FROM kt4_logs\n",
-        "GROUP BY user_id\n",
-        "ORDER BY user_id;\n",
-        "\"\"\"\n",
-        "\n",
-        "cur.execute(query)\n",
-        "rows = cur.fetchall()\n",
-        "\n",
-        "# ------------------------------------------------------\n",
-        "# 📊 5️⃣ Pandas DataFrame으로 보기\n",
-        "# ------------------------------------------------------\n",
-        "df = pd.DataFrame(rows, columns=['user_id','n_attempts','n_submit','n_quit'])\n",
-        "print(df.head())\n",
-        "\n",
-        "# ------------------------------------------------------\n",
-        "# 6️⃣ 연결 종료\n",
-        "# ------------------------------------------------------\n",
-        "conn.close()\n"
-      ],
-      "metadata": {
-        "id": "SRdwuJIj7M1Z"
       },
       "execution_count": null,
       "outputs": []
